--- a/style.css
+++ b/style.css
@@ -5,3 +5,21 @@
 body {
   padding: 0 30px 0 30px;
 }
+
+header {
+  height: 100px;
+  border-bottom: 1px solid #cccccc;
+    }
+header nav {
+  float: right;
+}
+
+header nav ul {
+  padding: 0 0 0;
+  margin: 40px 0 0 0;
+}
+
+header nav ul li {
+  margin-right: 10px;
+
+}
