--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ header nav {
   float: right;
 }
 
-header nav ul {
-  padding: 0 0 0;
+nav ul {
   margin: 40px 0 0 0;
+  padding: 0;
 }
 
 header nav ul li {
