--- a/style.css
+++ b/style.css
@@ -14,12 +14,28 @@ header nav {
   float: right;
 }
 
-header nav ul {
-  padding: 0 0 0;
+nav ul {
   margin: 40px 0 0 0;
+  padding: 0;
 }
 
-header nav ul li {
+nav ul li {
+  display: inline;
   margin-right: 10px;
+}
 
+nav a {
+  text-decoration: none;
+  color: #007bff;
+  font-size: 18px;
+}
+
+header h3 {
+  float: left;
+  font-size: 30px;
+}
+
+header h3 a {
+  text-decoration: none;
+  color: #868e96;
 }
